Test Run on RPi

--- a/static/GoPro.css
+++ b/static/GoPro.css
@@ -59,6 +59,7 @@ div#loading {
     
     .title {
         font-size: 26px;
+        font-weight: bold;
     }
     
     .sub-title {
@@ -90,6 +91,7 @@ div#loading {
     
     .title {
         font-size: 28px;
+        font-weight: bold;
     }
     
     .sub-title {
@@ -121,6 +123,7 @@ div#loading {
     
     .title {
         font-size: 30px;
+        font-weight: bold;
     }
     
     .sub-title {
@@ -152,6 +155,7 @@ div#loading {
     
     .title {
         font-size: 32px;
+        font-weight: bold;
     }
     
     .sub-title {
