--- a/templates/1_Home_Page.html
+++ b/templates/1_Home_Page.html
@@ -1,30 +1,12 @@
 {% extends '0_Navbar.html' %}
 {% block content %}
-<div class="row" style="margin-top: 25px;">
-    <div class="col-12">
-        <a href="{{ url_for('disconnect') }}" class=" btn btn-danger title" style="border-radius: 15px; width: 100%;" onclick="loading();">
-            <div class="row g-0">
-                <div class="col-2">
-                    <div class="flex-elem">
-                        <div class="flex-elem">
-                            <i class="fa-solid fa-ban header"></i>
-                        </div>                        
-                    </div>                    
-                </div>
-                <div class="col-10">
-                    <div class="flex-elem">
-                        <p class="header" style="text-align: center;">Disconnect GoPro</p>
-                    </div>                    
-                </div>
-            </div>
-        </a>        
-    </div>
-    <div class="col-4">
+<div class="row">
+    <div class="col-6">
         <div class="flex-elem" style="border: 3px solid black; margin: 10px; border-radius: 25px;">
             <div class="block-elem">
                 <p class="header" style="text-align: center;">Photo</p>
                 <hr style="border: 2px solid black;">
-                <img class="mx-auto img-elem" src="{{ url_for('static', filename='Photo_Click.jpg') }}" alt="">
+                <img class="mx-auto img-elem" src="{{ url_for('static', filename='media/Photo_Click.jpg') }}" alt="">
                 <hr style="border: 2px solid black;">
                 <div class="flex-elem" style="margin: 10px;">
                     <a href="{{ url_for('takePhoto', photoType='Photo') }}" class=" btn btn-primary title" style="border-radius: 15px;" onclick="loading();">Click Standard Photo</a>
@@ -38,12 +20,12 @@
             </div>                
         </div>
     </div>
-    <div class="col-4">
+    <!-- <div class="col-4">
         <div class="flex-elem" style="border: 3px solid black; margin: 10px; border-radius: 25px;">
             <div class="block-elem">
                 <p class="header" style="text-align: center;">Timelapse</p>
                 <hr style="border: 2px solid black;">
-                <img class="mx-auto img-elem" src="{{ url_for('static', filename='Timelapse_Click.jpg') }}" alt="">
+                <img class="mx-auto img-elem" src="{{ url_for('static', filename='media/Timelapse_Click.jpg') }}" alt="">
                 <hr style="border: 2px solid black;">
                 <div class="flex-elem" style="margin: 10px;">
                     <a href="" class=" btn btn-danger title" style="border-radius: 15px;" onclick="loading();">Capture Time Wrap</a>
@@ -56,13 +38,13 @@
                 </div>
             </div>                
         </div>
-    </div>
-    <div class="col-4">
+    </div> -->
+    <div class="col-6">
         <div class="flex-elem" style="border: 3px solid black; margin: 10px; border-radius: 25px;">
             <div class="block-elem">
                 <p class="header" style="text-align: center;">Video</p>
                 <hr style="border: 2px solid black;">
-                <img class="mx-auto img-elem" src="{{ url_for('static', filename='Video.jpg') }}" alt="">
+                <img class="mx-auto img-elem" src="{{ url_for('static', filename='media/Video.jpg') }}" alt="">
                 <hr style="border: 2px solid black;">
                 <div class="flex-elem" style="margin: 10px;">
                     <a href="{{ url_for('startVideo', videoType='Cinematic') }}" class=" btn btn-warning title" style="border-radius: 15px;" onclick="loading();">Cinematic Recording</a>
