--- a/templates/1_Home_Page.html
+++ b/templates/1_Home_Page.html
@@ -1,7 +1,7 @@
 {% extends '0_Navbar.html' %}
 {% block content %}
 <div class="row">
-    <div class="col-6">
+    <div class="col-12 col-md-6">
         <div class="flex-elem" style="border: 3px solid black; margin: 10px; border-radius: 25px;">
             <div class="block-elem">
                 <p class="header" style="text-align: center;">Photo</p>
@@ -39,7 +39,7 @@
             </div>                
         </div>
     </div> -->
-    <div class="col-6">
+    <div class="col-12 col-md-6">
         <div class="flex-elem" style="border: 3px solid black; margin: 10px; border-radius: 25px;">
             <div class="block-elem">
                 <p class="header" style="text-align: center;">Video</p>
